cloudnative.yml
# namespace 配置
apiVersion: v1
kind: Namespace
metadata:
  labels:
    k8s-app: cloudnative
    cloudnative/name: cloudnative
  name: cloudnative
---
# Service 配置
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: cloudnative
  labels:
    k8s-app: cloudnative
    cloudnative/name: cloudnative
spec:
  ports:
  - name: httpserver
    port: 8090
    protocol: TCP
    targetPort: 8090
    nodePort: 32001
  selector:
    k8s-app: cloudnative
    cloudnative/name: cloudnative
  type: NodePort
